--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -281,28 +281,28 @@ main {
 }
 
 .footer-content {
-    background-color: var(--primary);
-    height: 200px;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 40px;
-  }
+  background-color: var(--primary);
+  height: 200px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+}
 
-  .footer-text {
-    color: var(--white);
-    font-size: 1rem;
-    text-align: center;
-    margin: 0 1rem;
-  }
+.footer-text {
+  color: var(--white);
+  font-size: 1rem;
+  text-align: center;
+  margin: 0 1rem;
+}
 
-  .footer-link {
-    color: var(--success);
-    text-decoration: underline;
-    
-  
-  }
+.footer-link {
+  color: var(--success);
+  text-decoration: underline;
+
+
+}
 
 @media (max-width: 768px) {
   .header-content {
